--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,13 @@
 <resources>
     <string name="app_name">TaskApp</string>
     <string name="title_home">Home</string>
+
+    <integer-array name="img_id_arr">
+        <item>@drawable/handshake</item>
+        <item>@drawable/sharing</item>
+        <item>@drawable/onboarding</item>
+    </integer-array>
+
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <!-- TODO: Remove or change this placeholder text -->
